	  for now.
- faq.html:
	- Fix typos and small mistakes (Jordi).
- files.c:
  username_tab_completion()
	- Added the (char *) sizeof when allocating memory for the filename
	  array (Rocco).
  cwd_tab_completion()
	- removed skipping . and .. when tabulating matches.
	- Added the (char *) sizeof when allocating memory for the filename
	  array (Rocco).
  do_browser()
	- Don't decrement longest by the length of path.  Fixes crashes
	  on entering various dirs  (Rocco).
	- Don't ungetch() the exit key, unneeded, fixes inerting a file
	  causes exit code.
- nano.c:
  main()
	- Reorder the getopt options to be more or less alphabetical
	  (suggested by Sven Guckes).
- winio.c:
  do_cursorpos()
	- Optimizations and cleanups by Rocco Corsi.
  do_credits()
	- Spell Erik Andersen's name right.
  titlebar()
	- Now takes an arg, needed for browser function.
- utils.c:
  mallocstrcpy()
	- Takes char pointers now instead of void (makes debugging a
	  helluva lot easier)
- es.po:
	- Updates for file browser (Jordi).

nano 0.9.24 - 12/18/2000
General
	- Added --disable-help option, affects acconfig.h, configure(.in),
	  winio.c:do_help, nano.c:help_init,help_text_init,version.
	- Changed filename to no longer use PATH_MAX, so it can work on the
	  HURD.  Changes in files.c:write_file(), new function
	  nano.c:clear_filename(), many changed in main(), a few other
	  places.  Please test this!
	- Added -b, -e, and -f flags, which we ignore as nano provides 
	  their functionality already.
- cut.c:
  do_uncut_text()
	- Fix renumbering bug when uncutting marked text at filebot.
	- Fix screen not being displayed when we are uncutting marked
	  text at editbot (Bug discovered by Ken Tyler).
	- Fix magic line not getting created when (you guessed it)
	  uncutting marked text at filebot (Ryan Krebs).
- files.c:
  read_file()
	- If we encounter an error and insert is not set, run new_file().
	  (bug discovered by Ben Roberts).
  write_file()